--- a/references-2.bib
+++ b/references-2.bib
@@ -32,3 +32,36 @@ Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
     year = {1999},
     note = {Publisher: Stanford InfoLab},
 }
+@inproceedings{malewicz_pregel_2010,
+    address = {New York, NY, USA},
+    series = {{SIGMOD} '10},
+    title = {Pregel: a system for large-scale graph processing},
+    isbn = {978-1-4503-0032-2},
+    shorttitle = {Pregel},
+    url = {https://dl.acm.org/doi/10.1145/1807167.1807184},
+    doi = {10.1145/1807167.1807184},
+    abstract = {Many practical computing problems concern large graphs. Standard examples include the Web graph and various social networks. The scale of these graphs - in some cases billions of vertices, trillions of edges - poses challenges to their efficient processing. In this paper we present a computational model suitable for this task. Programs are expressed as a sequence of iterations, in each of which a vertex can receive messages sent in the previous iteration, send messages to other vertices, and modify its own state and that of its outgoing edges or mutate graph topology. This vertex-centric approach is flexible enough to express a broad set of algorithms. The model has been designed for efficient, scalable and fault-tolerant implementation on clusters of thousands of commodity computers, and its implied synchronicity makes reasoning about programs easier. Distribution-related details are hidden behind an abstract API. The result is a framework for processing large graphs that is expressive and easy to program.},
+    urldate = {2025-03-10},
+    booktitle = {Proceedings of the 2010 {ACM} {SIGMOD} {International} {Conference} on {Management} of data},
+    publisher = {Association for Computing Machinery},
+    author = {Malewicz, Grzegorz and Austern, Matthew H. and Bik, Aart J.C and Dehnert, James C. and Horn, Ilan and Leiser, Naty and Czajkowski, Grzegorz},
+    month = jun,
+    year = {2010},
+    pages = {135--146},
+}
+@article{xu_graphscope_2021,
+    title = {{GraphScope}: a one-stop large graph processing system},
+    volume = {14},
+    issn = {2150-8097},
+    shorttitle = {{GraphScope}},
+    url = {https://dl.acm.org/doi/10.14778/3476311.3476324},
+    doi = {10.14778/3476311.3476324},
+    abstract = {Due to diverse graph data and algorithms, programming and orchestration of complex computation pipelines have become the major challenges to making use of graph applications for Web-scale data analysis. GraphScope aims to provide a one-stop and efficient solution for a wide range of graph computations at scale. It extends previous systems by offering a unified and high-level programming interface and allowing the seamless integration of specialized graph engines in a general data-parallel computing environment.As we will show in this demo, GraphScope enables developers to write sequential graph programs in Python and provides automatic parallel execution on a cluster. This further allows GraphScope to seamlessly integrate with existing data processing systems in PyData ecosystem. To validate GraphScope's efficiency, we will compare a complex, multi-staged processing pipeline for a real-life fraud detection task with a manually assembled implementation comprising multiple systems. GraphScope achieves a 2.86× speedup on a trillion-scale graph in real production at Alibaba.},
+    number = {12},
+    urldate = {2025-04-11},
+    journal = {Proc. VLDB Endow.},
+    author = {Xu, Jingbo and Bai, Zhanning and Fan, Wenfei and Lai, Longbin and Li, Xue and Li, Zhao and Qian, Zhengping and Wang, Lei and Wang, Yanyan and Yu, Wenyuan and Zhou, Jingren},
+    month = jul,
+    year = {2021},
+    pages = {2703--2706},
+}
