--- a/references.bib
+++ b/references.bib
@@ -1,26 +1,150 @@
 
-@article{noauthor_pdf_2024,
-	title = {({PDF}) {Fast} {PageRank} {Computation} via a {Sparse} {Linear} {System}},
-	issn = {1542-7951},
-	url = {https://www.researchgate.net/publication/38339085_Fast_PageRank_Computation_via_a_Sparse_Linear_System},
-	abstract = {PDF {\textbar} Recently, the research community has devoted increased attention to reducing the computational time needed by web ranking algorithms. In... {\textbar} Find, read and cite all the research you need on ResearchGate},
+@inproceedings{khan_energy_2016,
+	address = {Heidelberg Germany},
+	title = {Energy efficiency of large scale graph processing platforms},
+	isbn = {978-1-4503-4462-3},
+	url = {https://dl.acm.org/doi/10.1145/2968219.2968296},
+	doi = {10.1145/2968219.2968296},
 	language = {en},
-	urldate = {2025-04-07},
-	journal = {ResearchGate},
-	month = dec,
-	year = {2024},
+	urldate = {2025-04-11},
+	booktitle = {Proceedings of the 2016 {ACM} {International} {Joint} {Conference} on {Pervasive} and {Ubiquitous} {Computing}: {Adjunct}},
+	publisher = {ACM},
+	author = {Khan, Kashif Nizam and Hoque, Mohammad Ashraful and Niemi, Tapio and Ou, Zhonghong and Nurminen, Jukka K.},
+	month = sep,
+	year = {2016},
+	pages = {1287--1294},
 }
 
-@article{noauthor_pdf_2024-1,
-	title = {({PDF}) {Fast} {PageRank} {Computation} via a {Sparse} {Linear} {System}},
-	issn = {1542-7951},
-	url = {https://www.researchgate.net/publication/38339085_Fast_PageRank_Computation_via_a_Sparse_Linear_System},
-	abstract = {PDF {\textbar} Recently, the research community has devoted increased attention to reducing the computational time needed by web ranking algorithms. In... {\textbar} Find, read and cite all the research you need on ResearchGate},
+@article{xu_graphscope_2021,
+	title = {{GraphScope}: a one-stop large graph processing system},
+	volume = {14},
+	issn = {2150-8097},
+	shorttitle = {{GraphScope}},
+	url = {https://dl.acm.org/doi/10.14778/3476311.3476324},
+	doi = {10.14778/3476311.3476324},
+	abstract = {Due to diverse graph data and algorithms, programming and orchestration of complex computation pipelines have become the major challenges to making use of graph applications for Web-scale data analysis. GraphScope aims to provide a one-stop and efficient solution for a wide range of graph computations at scale. It extends previous systems by offering a unified and high-level programming interface and allowing the seamless integration of specialized graph engines in a general data-parallel computing environment.As we will show in this demo, GraphScope enables developers to write sequential graph programs in Python and provides automatic parallel execution on a cluster. This further allows GraphScope to seamlessly integrate with existing data processing systems in PyData ecosystem. To validate GraphScope's efficiency, we will compare a complex, multi-staged processing pipeline for a real-life fraud detection task with a manually assembled implementation comprising multiple systems. GraphScope achieves a 2.86× speedup on a trillion-scale graph in real production at Alibaba.},
+	number = {12},
+	urldate = {2025-04-11},
+	journal = {Proc. VLDB Endow.},
+	author = {Xu, Jingbo and Bai, Zhanning and Fan, Wenfei and Lai, Longbin and Li, Xue and Li, Zhao and Qian, Zhengping and Wang, Lei and Wang, Yanyan and Yu, Wenyuan and Zhou, Jingren},
+	month = jul,
+	year = {2021},
+	pages = {2703--2706},
+}
+
+@article{low_distributed_2012,
+	title = {Distributed {GraphLab}: a framework for machine learning and data mining in the cloud},
+	volume = {5},
+	issn = {2150-8097},
+	shorttitle = {Distributed {GraphLab}},
+	url = {https://dl.acm.org/doi/10.14778/2212351.2212354},
+	doi = {10.14778/2212351.2212354},
+	abstract = {While high-level data parallel frameworks, like MapReduce, simplify the design and implementation of large-scale data processing systems, they do not naturally or efficiently support many important data mining and machine learning algorithms and can lead to inefficient learning systems. To help fill this critical void, we introduced the GraphLab abstraction which naturally expresses
+              asynchronous, dynamic, graph-parallel
+              computation while ensuring data consistency and achieving a high degree of parallel performance in the shared-memory setting. In this paper, we extend the GraphLab framework to the substantially more challenging distributed setting while preserving strong data consistency guarantees.
+            
+            We develop graph based extensions to pipelined locking and data versioning to reduce network congestion and mitigate the effect of network latency. We also introduce fault tolerance to the GraphLab abstraction using the classic Chandy-Lamport snapshot algorithm and demonstrate how it can be easily implemented by exploiting the GraphLab abstraction itself. Finally, we evaluate our distributed implementation of the GraphLab abstraction on a large Amazon EC2 deployment and show 1-2 orders of magnitude performance gains over Hadoop-based implementations.},
 	language = {en},
+	number = {8},
+	urldate = {2025-04-11},
+	journal = {Proceedings of the VLDB Endowment},
+	author = {Low, Yucheng and Bickson, Danny and Gonzalez, Joseph and Guestrin, Carlos and Kyrola, Aapo and Hellerstein, Joseph M.},
+	month = apr,
+	year = {2012},
+	pages = {716--727},
+}
+
+@article{low_distributed_2012-1,
+	title = {Distributed {GraphLab}: a framework for machine learning and data mining in the cloud},
+	volume = {5},
+	issn = {2150-8097},
+	shorttitle = {Distributed {GraphLab}},
+	url = {https://dl.acm.org/doi/10.14778/2212351.2212354},
+	doi = {10.14778/2212351.2212354},
+	abstract = {While high-level data parallel frameworks, like MapReduce, simplify the design and implementation of large-scale data processing systems, they do not naturally or efficiently support many important data mining and machine learning algorithms and can lead to inefficient learning systems. To help fill this critical void, we introduced the GraphLab abstraction which naturally expresses asynchronous, dynamic, graph-parallel computation while ensuring data consistency and achieving a high degree of parallel performance in the shared-memory setting. In this paper, we extend the GraphLab framework to the substantially more challenging distributed setting while preserving strong data consistency guarantees.We develop graph based extensions to pipelined locking and data versioning to reduce network congestion and mitigate the effect of network latency. We also introduce fault tolerance to the GraphLab abstraction using the classic Chandy-Lamport snapshot algorithm and demonstrate how it can be easily implemented by exploiting the GraphLab abstraction itself. Finally, we evaluate our distributed implementation of the GraphLab abstraction on a large Amazon EC2 deployment and show 1-2 orders of magnitude performance gains over Hadoop-based implementations.},
+	number = {8},
+	urldate = {2025-04-11},
+	journal = {Proc. VLDB Endow.},
+	author = {Low, Yucheng and Bickson, Danny and Gonzalez, Joseph and Guestrin, Carlos and Kyrola, Aapo and Hellerstein, Joseph M.},
+	month = apr,
+	year = {2012},
+	pages = {716--727},
+}
+
+@misc{noauthor_giraphproposal_nodate,
+	title = {{GiraphProposal} - {INCUBATOR} - {Apache} {Software} {Foundation}},
+	url = {https://cwiki.apache.org/confluence/display/INCUBATOR/GiraphProposal},
+	urldate = {2025-04-11},
+}
+
+@article{liu_fast_2015,
+	title = {Fast {PageRank} approximation by adaptive sampling},
+	volume = {42},
+	issn = {0219-3116},
+	url = {https://doi.org/10.1007/s10115-013-0691-1},
+	doi = {10.1007/s10115-013-0691-1},
+	abstract = {PageRank is typically computed from the power of transition matrix in a Markov Chain model. It is therefore computationally expensive, and efficient approximation methods to accelerate the computation are necessary, especially when it comes to large graphs. In this paper, we propose two sampling algorithms for PageRank efficient approximation: Direct sampling and Adaptive sampling. Both methods sample the transition matrix and use the sample in PageRank computation. Direct sampling method samples the transition matrix once and uses the sample directly in PageRank computation, whereas adaptive sampling method samples the transition matrix multiple times with an adaptive sample rate which is adjusted iteratively as the computing procedure proceeds. This adaptive sample rate is designed for a good trade-off between accuracy and efficiency for PageRank approximation. We provide detailed theoretical analysis on the error bounds of both methods. We also compare them with several state-of-the-art PageRank approximation methods, including power extrapolation and inner–outer power iteration algorithm. Experimental results on several real-world datasets show that our methods can achieve significantly higher efficiency while attaining comparable accuracy than state-of-the-art methods.},
+	language = {en},
+	number = {1},
 	urldate = {2025-04-07},
-	journal = {ResearchGate},
-	month = dec,
-	year = {2024},
+	journal = {Knowledge and Information Systems},
+	author = {Liu, Wenting and Li, Guangxia and Cheng, James},
+	month = jan,
+	year = {2015},
+	keywords = {Adaptive Sampling, PageRank, Power iteration},
+	pages = {127--146},
+}
+
+@article{chen_powerlyra_2018,
+	title = {{PowerLyra}: {Differentiated} {Graph} {Computation} and {Partitioning} on {Skewed} {Graphs}},
+	volume = {5},
+	issn = {2329-4949, 2329-4957},
+	shorttitle = {{PowerLyra}},
+	url = {https://dl.acm.org/doi/10.1145/3298989},
+	doi = {10.1145/3298989},
+	abstract = {Natural graphs with skewed distributions raise unique challenges to distributed graph computation and partitioning. Existing graph-parallel systems usually use a “one-size-fits-all” design that uniformly processes all vertices, which either suffer from notable load imbalance and high contention for high-degree vertices (e.g., Pregel and GraphLab) or incur high communication cost and memory consumption even for low-degree vertices (e.g., PowerGraph and GraphX). In this article, we argue that skewed distributions in natural graphs also necessitate differentiated processing on high-degree and low-degree vertices. We then introduce PowerLyra, a new distributed graph processing system that embraces the best of both worlds of existing graph-parallel systems. Specifically, PowerLyra uses centralized computation for low-degree vertices to avoid frequent communications and distributes the computation for high-degree vertices to balance workloads. PowerLyra further provides an efficient hybrid graph partitioning algorithm (i.e., hybrid-cut) that combines edge-cut (for low-degree vertices) and vertex-cut (for high-degree vertices) with heuristics. To improve cache locality of inter-node graph accesses, PowerLyra further provides a locality-conscious data layout optimization. PowerLyra is implemented based on the latest GraphLab and can seamlessly support various graph algorithms running in both synchronous and asynchronous execution modes. A detailed evaluation on three clusters using various graph-analytics and MLDM (Machine Learning and Data Mining) applications shows that PowerLyra outperforms PowerGraph by up to 5.53X (from 1.24X) and 3.26X (from 1.49X) for real-world and synthetic graphs, respectively, and is much faster than other systems like GraphX and Giraph, yet with much less memory consumption. A porting of hybrid-cut to GraphX further confirms the efficiency and generality of PowerLyra.},
+	language = {en},
+	number = {3},
+	urldate = {2025-04-07},
+	journal = {ACM Transactions on Parallel Computing},
+	author = {Chen, Rong and Shi, Jiaxin and Chen, Yanzhe and Zang, Binyu and Guan, Haibing and Chen, Haibo},
+	month = sep,
+	year = {2018},
+	pages = {1--39},
+}
+
+@inproceedings{wu_approxrank_2009,
+	title = {{ApproxRank}: {Estimating} {Rank} for a {Subgraph}},
+	shorttitle = {{ApproxRank}},
+	url = {https://ieeexplore.ieee.org/document/4812391},
+	doi = {10.1109/ICDE.2009.108},
+	abstract = {Customized semantic query answering, personalized search, focused crawlers and localized search engines frequently focus on ranking the pages contained within a subgraph of the global Web graph. The challenge for these applications is to compute PageRank-style scores efficiently on the subgraph, i.e., the ranking must reflect the global link structure of the Web graph but it must do so without paying the high overhead associated with a global computation. We propose a framework of an exact solution and an approximate solution for computing ranking on a subgraph. The IdealRank algorithm is an exact solution with the assumption that the scores of external pages are known. We prove that the IdealRank scores for pages in the subgraph converge. Since the PageRank-style scores of external pages may not typically be available, we propose the ApproxRank algorithm to estimate scores for the subgraph. Both IdealRank and ApproxRank represent the set of external pages with an external node L1 and extend the subgraph with links to L1. They also modify the PageRank-style transition matrix with respect to L1. We analyze the L1 distance between IdealRank scores and ApproxRank scores of the subgraph and show that it is within a constant factor of the L1 distance of the external pages (e.g., the true PageRank scores and uniform scores assumed by ApproxRank). We compare ApproxRank and a stochastic complementation approach (SC), a current best solution for this problem, on different types of subgraphs. ApproxRank has similar or superior performance to SC and typically improves on the runtime performance of SC by an order of magnitude or better. We demonstrate that ApproxRank provides a good approximation to PageRank for a variety of subgraphs.},
+	urldate = {2025-04-07},
+	booktitle = {2009 {IEEE} 25th {International} {Conference} on {Data} {Engineering}},
+	author = {Wu, Yao and Raschid, Louiqa},
+	month = mar,
+	year = {2009},
+	note = {ISSN: 2375-026X},
+	keywords = {Application software, Computer applications, Crawlers, Data engineering, Educational institutions, Explosions, Runtime, Search engines, Stochastic processes, Web pages},
+	pages = {54--65},
+}
+
+@article{liu_fast_2015-1,
+	title = {Fast {PageRank} approximation by adaptive sampling},
+	volume = {42},
+	issn = {0219-3116},
+	url = {https://doi.org/10.1007/s10115-013-0691-1},
+	doi = {10.1007/s10115-013-0691-1},
+	abstract = {PageRank is typically computed from the power of transition matrix in a Markov Chain model. It is therefore computationally expensive, and efficient approximation methods to accelerate the computation are necessary, especially when it comes to large graphs. In this paper, we propose two sampling algorithms for PageRank efficient approximation: Direct sampling and Adaptive sampling. Both methods sample the transition matrix and use the sample in PageRank computation. Direct sampling method samples the transition matrix once and uses the sample directly in PageRank computation, whereas adaptive sampling method samples the transition matrix multiple times with an adaptive sample rate which is adjusted iteratively as the computing procedure proceeds. This adaptive sample rate is designed for a good trade-off between accuracy and efficiency for PageRank approximation. We provide detailed theoretical analysis on the error bounds of both methods. We also compare them with several state-of-the-art PageRank approximation methods, including power extrapolation and inner–outer power iteration algorithm. Experimental results on several real-world datasets show that our methods can achieve significantly higher efficiency while attaining comparable accuracy than state-of-the-art methods.},
+	language = {en},
+	number = {1},
+	urldate = {2025-04-07},
+	journal = {Knowledge and Information Systems},
+	author = {Liu, Wenting and Li, Guangxia and Cheng, James},
+	month = jan,
+	year = {2015},
+	keywords = {Adaptive Sampling, PageRank, Power iteration},
+	pages = {127--146},
 }
 
 @inproceedings{tian_towards_2017,
@@ -98,7 +222,7 @@
 	urldate = {2025-04-04},
 }
 
-@inproceedings{wu_approxrank_2009,
+@inproceedings{wu_approxrank_2009-1,
 	title = {{ApproxRank}: {Estimating} {Rank} for a {Subgraph}},
 	shorttitle = {{ApproxRank}},
 	url = {https://ieeexplore.ieee.org/document/4812391},
@@ -137,7 +261,7 @@
 	pages = {890--904},
 }
 
-@article{noauthor_pdf_2024-2,
+@article{noauthor_pdf_2024,
 	title = {({PDF}) {Monte} {Carlo} {Methods} in {PageRank} {Computation}: {When} {One} {Iteration} is {Sufficient}},
 	shorttitle = {({PDF}) {Monte} {Carlo} {Methods} in {PageRank} {Computation}},
 	url = {https://www.researchgate.net/publication/220179809_Monte_Carlo_Methods_in_PageRank_Computation_When_One_Iteration_is_Sufficient},
@@ -148,24 +272,6 @@
 	journal = {ResearchGate},
 	month = oct,
 	year = {2024},
-}
-
-@article{anikin_efficient_2022,
-	title = {Efficient {Numerical} {Methods} to {Solve} {Sparse} {Linear} {Equations} with {Application} to {PageRank}},
-	volume = {37},
-	issn = {1055-6788, 1029-4937},
-	url = {http://arxiv.org/abs/1508.07607},
-	doi = {10.1080/10556788.2020.1858297},
-	abstract = {In this paper, we propose three methods to solve the PageRank problem for the transition matrices with both row and column sparsity. Our methods reduce the PageRank problem to the convex optimization problem over the simplex. The first algorithm is based on the gradient descent in L1 norm instead of the Euclidean one. The second algorithm extends the Frank-Wolfe to support sparse gradient updates. The third algorithm stands for the mirror descent algorithm with a randomized projection. We proof converges rates for these methods for sparse problems as well as numerical experiments support their effectiveness.},
-	number = {3},
-	urldate = {2025-04-03},
-	journal = {Optimization Methods and Software},
-	author = {Anikin, Anton and Gasnikov, Alexander and Gornov, Alexander and Kamzolov, Dmitry and Maximov, Yury and Nesterov, Yurii},
-	month = may,
-	year = {2022},
-	note = {arXiv:1508.07607 [math]},
-	keywords = {Mathematics - Optimization and Control},
-	pages = {907--935},
 }
 
 @article{xie_parameterized_2023,
@@ -294,7 +400,7 @@ Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
 	doi = {10.20944/preprints202306.1917.v1},
 }
 
-@article{anikin_efficient_2022-1,
+@article{anikin_efficient_2022,
 	title = {Efficient {Numerical} {Methods} to {Solve} {Sparse} {Linear} {Equations} with {Application} to {PageRank}},
 	volume = {37},
 	issn = {1055-6788, 1029-4937},
